--- a/src/lib/main.css
+++ b/src/lib/main.css
@@ -1,3 +1,174 @@
-body {
-	color: red;
+.doc {
+	--_border-color: var(--doc-border-color, rgba(0, 0, 0, 0.2));
+	--_border-style: var(--doc-border-style, solid);
+	--_border-width: var(--doc-border-width, 1px);
+	--_border: var(--doc-border, var(--_border-width) var(--_border-style) var(--_border-color));
+
+	--_font-family-sans-serif: var(
+		--doc-font-family-sans-serif,
+		system-ui,
+		-apple-system,
+		BlinkMacSystemFont,
+		'Segoe UI',
+		Roboto,
+		Helvetica,
+		Arial,
+		sans-serif,
+		'Apple Color Emoji',
+		'Segoe UI Emoji',
+		'Segoe UI Symbol'
+	);
+
+	--_font-family-monospace: var(
+		--doc-font-family-monospace,
+		ui-monospace,
+		Menlo,
+		Monaco,
+		'Cascadia Mono',
+		'Segoe UI Mono',
+		'Roboto Mono',
+		'Oxygen Mono',
+		'Ubuntu Monospace',
+		'Source Code Pro',
+		'Fira Mono',
+		'Droid Sans Mono',
+		'Courier New',
+		monospace
+	);
+
+	--_h1-font-size: var(--doc-h1-font-size, 2rem);
+	--_h2-font-size: var(--doc-h2-font-size, 1.5rem);
+	--_h3-font-size: var(--doc-h3-font-size, 1.25rem);
+	--_h4-font-size: var(--doc-h4-font-size, 1.125rem);
+	--_h5-font-size: var(--doc-h5-font-size, 1rem);
+	--_h6-font-size: var(--doc-h6-font-size, 1rem);
+
+	--_line-height: var(--doc-line-height, 1.5);
+
+	--_toc-header-font-size: var(--doc-toc-header-font-size, 1.5rem);
+}
+
+.doc,
+.doc * {
+	box-sizing: border-box;
+}
+
+.doc {
+	font-family: var(--_font-family-sans-serif);
+	line-height: var(--_line-height);
+	padding-inline: 1rem;
+}
+
+.doc * {
+	margin: 0;
+	padding: 0;
+}
+
+.doc code {
+	font-family: var(--_font-family-monospace);
+}
+
+.doc :where(pre code.hljs) {
+	display: block;
+	overflow-x: auto;
+	padding: 1em;
+}
+
+.doc :where(code.hljs) {
+	padding: 3px 5px;
+}
+
+.doc-toc ol,
+.doc-toc ul {
+	list-style: none;
+	margin: 0;
+	padding: 0;
+}
+
+.doc-toc li > ol {
+	padding-left: 1rem;
+}
+
+.doc-toc a {
+	color: inherit;
+	display: block;
+	padding-block: 0.25rem;
+	text-decoration: none;
+}
+
+.doc-toc-header {
+	font-size: var(--_toc-header-font-size);
+}
+
+.doc-content > * + * {
+	margin-top: 1rem;
+}
+
+.doc-content h1 {
+	font-size: var(--_h1-font-size);
+}
+
+.doc-content h2 {
+	border-bottom: var(--_border);
+	font-size: var(--_h2-font-size);
+}
+
+.doc-content h3 {
+	font-size: var(--_h3-font-size);
+}
+
+.doc-content h4 {
+	font-size: var(--_h4-font-size);
+}
+
+.doc-content h5 {
+	font-size: var(--_h5-font-size);
+}
+
+.doc-content h6 {
+	font-size: var(--_h6-font-size);
+}
+
+.doc-content ul,
+.doc-content ol {
+	padding-inline-start: 1rem;
+}
+
+@media (max-width: 991px) {
+	.doc-toc {
+		border-bottom: var(--_border);
+		padding-block: 1rem;
+	}
+
+	.doc-toc a {
+		font-size: 1.125rem;
+	}
+}
+
+@media (min-width: 992px) {
+	.doc {
+		--_h1-font-size: var(--doc-h1-font-size, 2.5rem);
+		--_h2-font-size: var(--doc-h2-font-size, 2rem);
+		--_h3-font-size: var(--doc-h3-font-size, 1.5rem);
+		--_h4-font-size: var(--doc-h4-font-size, 1.25rem);
+		--_h5-font-size: var(--doc-h5-font-size, 1.125rem);
+		--_h6-font-size: var(--doc-h6-font-size, 1rem);
+
+		display: grid;
+		grid-template-columns:
+			auto [toc-start] 16rem [toc-end] 3rem [content-start] min(100%, 48rem)
+			[content-end] 3rem auto;
+	}
+
+	.doc-toc {
+		border-right: var(--_border);
+		grid-column: toc;
+		padding-block: 4rem;
+		padding-inline-end: 1rem;
+	}
+
+	.doc-content {
+		grid-column: content;
+		padding-block: 3rem;
+	}
 }
